@@ -1,3 +1,7 @@
+2010-04-20  Andreas Hinzmann  <hinzmann@cern.ch>
+
+	* fix in jet_l3_correction_x
+
 2010-04-19  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-08-08
